# linear-agent

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  DEVELOPING_AGENT_INTERACTION.md  GETTING_STARTED.md  INTERACTION_BEST_PRACTICES.md  PROJECT_SUMMARY.md  README.md  REPO_STATE.md  SIGNALS.md  STATUS.md  architect_prompt.txt  chronos_nuke.py  commit_docs.sh  linear-agent-user.service  linear-agent.service  linear-agent.user-service  linear-worker-user.service  linear_agent.py  linear_agent.py.bak  plane-agent-user.service  plane_agent.py  pyproject.toml  run_registry.py  sample_slack_conversation.json  setup.sh  todo.md  untitled-session-fe5e8bde.json  worker_prompt.txt
docs/: PLY-150-virtual-workspace-investigation.md  PLY-153-slack-gateway-learnings.md  PLY-165-warp-cloud-agents-capability-map.md  PLY-166-openhands-agent-canvas-review.md  PLY-43-linear-diff-rendering-investigation.md  PLY-48-paperclip-linear-plugin-home-lab.md  PLY-78-project-context-injection.md  PLY-79-concurrency-architecture-recommendations.md  PLY-79-worker-concurrency-evaluation.md  hermes-native-mode.md  linear-activity-status-2026-06-30.md  linear-agent-architecture-and-learnings.md  progress-visibility.md
plans/: PLY-40-streaming-progress-plan.md
reports/: ply-17-hermes-latency-report.md
scripts/: ply-43_render_diff_formats.py
tests/: test_concurrency.py  test_gate_finalize.py  test_hermes_native_mode.py  test_issue_relations.py  test_lifespan_shutdown.py  test_plane_agent.py  test_pr_urls.py  test_project_context.py  test_prompted_context.py  test_run_registry.py  (+2 more)
(+10 files in other folders)
