[project]
name = "linear-agent"
version = "1.0.0"
description = "Hermes-powered autonomous agent for Linear — integrates with Linear's Agent Session API"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}
keywords = ["linear", "agent", "hermes", "ai", "automation"]
authors = [
    {name = "Epaphroditus", email = "hermes@epaphrodit.us"},
]

dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "httpx>=0.27.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
]

[project.scripts]
linear-architect = "linear_agent:main"
linear-worker = "linear_agent:main"

# Legacy alias — same as architect.
linear-agent = "linear_agent:main"

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
]
